# polars-bio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  Makefile  README.md  mkdocs.yml  pyproject.toml  run.py  somefile.ipc  somefile.parquet
.github/workflows/: publish_documentation.yml  publish_to_pypi.yml  release.yml
benchmark/: run_bench.ipynb
benchmark/queries/: 0-1.sql  0-3.sql  0-8.sql  7-8.sql
benchmark/queries/complement/: table_1.csv  table_2.csv  test.sql
benchmark/queries/nearest/: table_1.csv  table_2.csv  test.sql
benchmark/results/apple-silicon/: 0-1.json  0-7.json  0-8.json  1-2.json  2-7.json  3-7.json  4-8.json  7-8.json
benchmark/src/: bench_count_overlaps.py  bench_count_overlaps_parallel.py  bench_nearest.py  bench_nearest_parallel.py  bench_overlap.py  bench_overlap_dataframes.py  bench_overlap_dataframes_parallel.py  bench_overlap_parallel.py
benchmark/src/memory/: mem_polars_bio.py
benchmark/src/results/overlap/: 1-0.json  1-2.json  2-7.json  7-0.json  7-3.json
docs/: api.md  cookbook.md  faq.md  features.md  index.md  performance.md  quickstart.md  requirements.txt  supplement.md  versions.json
docs/notebooks/: cookbook.ipynb  tutorial.ipynb
polars_bio/: __init__.py  constants.py  context.py  interval_op_helpers.py  io.py  logging.py  operations.py  overlap.py  polars_ext.py  range_op.py  range_op_helpers.py  range_op_io.py  range_viz.py  range_wrappers.py
src/: context.rs  lib.rs  operation.rs  option.rs  query.rs  scan.rs  streaming.rs  udtf.rs  utils.rs
tests/: _expected.py  test_bioframe.py  test_io.py  test_native.py  test_native_overlap.py  test_pandas.py  test_pandas_overlap.py  test_pig_latinnify.py  test_polars.py  test_polars_ext.py  test_polars_overlap.py  test_streaming.py
tests/data/count_overlaps/: reads.csv
tests/data/coverage/: reads.csv  targets.csv
tests/data/exons/: .part-00000-47fafbb5-1cab-410c-9461-d10effacf760-c000.snappy.parquet.crc  .part-00001-47fafbb5-1cab-410c-9461-d10effacf760-c000.snappy.parquet.crc  part-00000-47fafbb5-1cab-410c-9461-d10effacf760-c000.snappy.parquet  part-00001-47fafbb5-1cab-410c-9461-d10effacf760-c000.snappy.parquet
tests/data/fBrain-DS14718/: .part-00000-a0d75244-2d87-41eb-a3eb-a18847c7cb87-c000.snappy.parquet.crc  .part-00001-a0d75244-2d87-41eb-a3eb-a18847c7cb87-c000.snappy.parquet.crc  part-00000-a0d75244-2d87-41eb-a3eb-a18847c7cb87-c000.snappy.parquet  part-00001-a0d75244-2d87-41eb-a3eb-a18847c7cb87-c000.snappy.parquet
tests/data/io/bam/: test.bam  test.bam.bai
tests/data/io/bed/: test.bed
tests/data/io/fasta/: test.fasta
tests/data/io/fastq/: test.fastq
tests/data/io/gff/: test.gff
tests/data/io/vcf/: vep.vcf.bgz
tests/data/merge/: input.csv
tests/data/nearest/: targets.csv
tests/data/overlap/: reads.csv  targets.csv
