[package]
name = "polars_bio"
version = "0.8.2"
edition = "2021"

[lib]
name = "polars_bio"
crate-type= ["cdylib"]




[dependencies]
datafusion-python = { git = "https://github.com/apache/datafusion-python.git", rev = "5c834934dec89bd96ff70df3b278e9d6fe78f7ec"}
pyo3 = { version = "0.22"}
pyo3-log = "0.11.0"
sequila-core = { git = "https://github.com/biodatageeks/sequila-native.git", rev = "43453dca320cc25a02f440850e3b947b813785c3" }

datafusion = { version = "43.0.0"}
arrow = "53.3.0"
arrow-schema = "53.3.0"
arrow-array = { version = "53.3.0", features = ["ffi"] }
tokio = {version = "1.42.0", features = ["full", "tracing"]}
log = "0.4.22"
tracing = { version = "0.1.41", features = ["log"] }
futures-util = "0.3.31"



polars = { git = "https://github.com/mwiewior/polars.git" , rev = "9d4fca54b1d71fce08a51cf00a88f67c67313706"}
polars-plan = { git = "https://github.com/mwiewior/polars.git" , rev = "9d4fca54b1d71fce08a51cf00a88f67c67313706", features = ["parquet", "cloud", "serde"] }
polars-lazy = { git = "https://github.com/mwiewior/polars.git" , rev = "9d4fca54b1d71fce08a51cf00a88f67c67313706",  features = ["parquet", "new_streaming", "streaming", "csv", "cse"]}
polars-core = {git = "https://github.com/mwiewior/polars.git" , rev = "9d4fca54b1d71fce08a51cf00a88f67c67313706"}
polars-arrow =  { git = "https://github.com/mwiewior/polars.git" , rev = "9d4fca54b1d71fce08a51cf00a88f67c67313706"}
polars-python = { git = "https://github.com/mwiewior/polars.git" , rev = "9d4fca54b1d71fce08a51cf00a88f67c67313706"}

#exon ="0.32.4"
exon = { git = "https://github.com/mwiewior/exon.git", rev="d134d923e6c592a9972d93215a12c759c70a7ed5"}
datafusion-vcf = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git/", rev = "cc38b4ac3fe2d252245200422930fa879e92b92d"}
async-trait = "0.1.86"
futures = "0.3.31"
coitrees = "0.4.0"
fnv = "1.0.7"
async-stream = "0.3.6"
rand = "0.8.5"
