[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-bio"
version = "0.2.10"
description = "Blazing fast genomic operations on large Python dataframes"
authors = []
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "polars~=1.16.0",
  "pandas~=2.2.3",
  "pyarrow~=18.1.0",
  "datafusion ~=42.0.0",
  "bioframe ~=0.7.2"]

[tool.maturin]
module-name = "polars_bio"

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true

[tool.poetry]
name = "polars-bio"
version = "0.1.0"
description = ""
authors = ["Marek Wiewiórka <marek.wiewiorka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
polars = "^1.16.0"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
datafusion = "^42.0.0"
bioframe = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"
jupyter = "^1.1.0"
ruff = "^0.8.2"
maturin = "^1.7.5"
mdpd = "^0.2.1"
mkdocs = "^1.6.1"
mkdocs-jupyter = "^0.25.1"
mkdocs-material = "^9.5.48"
mike = "^2.1.3"
mkdocstrings-python = "^1.12.2"
mypy = "^1.13.0"