[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-bio"
version = "0.8.2"
description = "Blazing fast genomic operations on large Python dataframes"
authors = []
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "polars~=1.17.1",
#  "polars @ git+https://github.com/mwiewior/polars.git@9d4fca54b1d71fce08a51cf00a88f67c67313706#subdirectory=py-polars",
  "pandas~=2.2.3",
  "pyarrow~=18.1.0",
  "datafusion ~=43.1.0",
  "bioframe ~=0.7.2",
  "tqdm ~=4.67.1"]

[tool.maturin]
module-name = "polars_bio"

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true

[tool.poetry]
name = "polars-bio"
version = "0.1.0"
description = ""
authors = ["Marek Wiewiórka <marek.wiewiorka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
polars ="1.17.1"
#polars  = { git = "https://github.com/mwiewior/polars.git", rev ="9d4fca54b1d71fce08a51cf00a88f67c67313706", subdirectory = "py-polars"}
pandas = "^2.2.3"
pyarrow = "^18.1.0"
datafusion = "^43.1.0"
bioframe = "^0.7.2"
tqdm = "^4.67.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"
jupyter = "^1.1.0"
ruff = "^0.8.2"
maturin = "^1.7.5"
mdpd = "^0.2.1"
mkdocs = "^1.6.1"
mkdocs-jupyter = "^0.25.1"
mkdocs-material = "^9.5.48"
mike = "^2.1.3"
mkdocstrings-python = "^1.12.2"
markdown-exec = "^1.10.0"
mkdocs-with-pdf = "^0.9.3"
mypy = "^1.13.0"
py-cpuinfo = "^9.0.0"
jupyter_client = "^8.6.3"
psutil = "^6.1.1"
rich = "^13.9.4"
tqdm = "^4.67.1"

## only for benchmarking
pyranges = {git = "https://github.com/pyranges/pyranges.git", rev = "4f0a153336e7153cdfea15b141ce4ea35a24e233" }
GenomicRanges = "^0.5.0"
#pyranges1 = { git = "https://github.com/mwiewior/pyranges1.git", rev = "949d7c15c1c2e217f4404415f79b386f326b6f8d"}
pybedtools = "^0.10.0"
pygenomics =  { git = "https://gitlab.com/gtamazian/pygenomics.git", rev = "0.1.1"}